# Helix-Runtime

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
.claude/: settings.local.json
arbiter/: __init__.py  __main__.py  agent.py  civic.py  models.py  settings.py
arbiter/agents/: backend.py
arbiter/civic/: __init__.py  runtime.py
arbiter/cli/: main.py
arbiter/core/: contracts.py
arbiter/graph/: checkpointer.py  workflow.py
arbiter/market/: archetypes.py  clustering.py  scoring.py
arbiter/mission/: decomposer.py  governance.py  recovery.py  runner.py  state.py
arbiter/repo/: collector.py  worktree.py
arbiter/runtime/: checkpoints.py  config.py  events.py  migrate.py  model_payloads.py  paths.py  persistence.py  replay.py  store.py
arbiter/server/: __init__.py  app.py  manager.py  materializer.py  registry.py  schemas.py
arbiter/sim/: factory.py
arbiter/tools/: local.py
arbiter/validators/: engine.py
docs/: architecture-gap-report.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
tests/: conftest.py  fake_provider_backend.py  test_bidding_architecture.py  test_bidding_provenance.py  test_civic_runtime.py  test_decomposer.py  test_local_toolset.py  test_mission_runner.py  test_proposal_generation.py  test_provider_router.py  test_recovery.py  test_repo_collector.py  test_runtime_config.py  test_scoring.py  test_server_api.py  test_usage_accounting.py  test_validation.py  test_workflow_graph.py  test_worktree_manager.py
(+43 files in other folders)
