[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-runtime"
version = "0.1.0"
description = "Arbiter autonomous mission runner"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain",
    "langchain-anthropic",
    "langchain-mcp-adapters",
    "langchain-openai",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "GitPython",
    "networkx",
    "numpy",
    "orjson",
    "filelock",
    "psutil",
    "httpx",
    "mcp",
    "tenacity",
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "typer",
    "rich",
    "structlog",
    "anyio",
]

[project.scripts]
arbiter = "arbiter.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["arbiter*"]

[tool.ruff]
line-length = 100
target-version = "py313"
